[package]
name = "exponential_backoff"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.24.2"
reqwest = "0.11.14"
chrono = "0.4.23"
google-youtube3 = "5.0.2"
serde_json = "1.0.91"
rand = "0.8.5"
log = "0.4.17"
